vlib/v/checker/tests/veb_handler_param_type_err.vv
module main

import veb

struct Params {
	offset int
}

pub struct Context {
	veb.Context
}

pub struct App {}

fn main() {}

pub fn (app &App) index(mut ctx Context, params Params) veb.Result {
	return veb.no_result()
}
